--- a/service/style.scss
+++ b/service/style.scss
@@ -7,16 +7,12 @@ sans-serif;
 body {
     font-family: 'Montserrat', sans-serif;
     width: 100%;
+    margin: 0px;
 }
-
-.service {
-    margin-top: 140px;
-}
-
 
 .stitre {
     color: $color1;
-    margin: 10px;
+    margin-bottom: 40px;
     text-align: center;
     text-decoration: underline;
 }
@@ -30,11 +26,11 @@ hr {
 }
 
 .svideo {
-    width: 900px;
-    height: 300px;
-    position: relative;
-    left: 160px;
-
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: auto;
+    width: 99%;
 }
 
 .Spara {
@@ -48,33 +44,28 @@ hr {
     color: $color1;
 }
 
-.svido {
-    width: 100%;
-    background: $color;
-    margin-top: 30px;
-}
-
 .para1 {
     font-family: $font-family;
     font-size: 80%;
 }
 
 .Ssection1 {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 10px;
-    margin-left: 40px;
+    // display: grid;
+    // grid-template-columns: (1fr 1fr 1fr);
+    // grid-template-rows: repeat(1fr 1fr);
+    // grid-gap: 10px;
+    // margin-left: 40px;
+    display: flex;
+    flex-direction: column column column;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: space-around;
 }
-
-
 
 .ssection3 {
     background-image: url(images/agence-web.png);
     text-align: center;
-    
 }
-
 
 .StitreD {
     color: $color2;
@@ -82,6 +73,7 @@ hr {
     font-size: 30px;
     padding: 5%;
     line-height: 10%;
+    // max-width:600px ;
 }
 
 .btR {
@@ -105,7 +97,7 @@ hr {
     font-size: 30px;
     width: 30%;
     border: 1px solid black;
-    transition:.6s;
+    transition: 10s;
     overflow: hidden;
 }
 
@@ -137,24 +129,24 @@ hr {
 
 
 /*tablet*/
-@media (max-width:781px) {
+@media (max-width:1130px) {
     body {
-        // width: ;
         margin: 0;
         padding: 0;
     }
 
-    .Ssection1 {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-
-
-    }
-
     .svideo {
-        width: 500px;
-        height: 300px;
+        @media (max-width:1130px) {
+            margin-top: 5%;
+            display: flex;
+        }
+
     }
+
+    // .Ssection1 {
+    //     display: grid;
+    //     grid-template-columns: 1fr 1fr;
+    // }
 
     .Spara {
         font-size: 70%;
@@ -192,6 +184,9 @@ hr {
     .StitreD {
         font-size: 120%;
         margin: 10px;
+        line-height: 150%;
+
+
     }
 
     .StitreF {
@@ -231,12 +226,12 @@ hr {
 }
 
 @mixin shad {
-    width: 200px;
+    width: 300px;
+    height: 400px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
     border-radius: 2%;
-    margin: 20%;
-    padding: 10%;
+    margin: 10px;
     border-left: 10px $color1 solid;
 
     @media (max-width:781px) {
@@ -248,12 +243,16 @@ hr {
     @media (max-width:375px) {
         margin: 0;
         margin-bottom: 10%;
-        margin-left: 15%;
+        margin-left: 9%;
+        width: 250px;
     }
 
 }
 
 .Spartie3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     @include shad
 }
 
@@ -280,98 +279,102 @@ hr {
 @import"./style";
 
 /*mobile*/
-@media (max-width:375px) {
-    body {
-        width: 375;
-        padding: 0;
-        margin: 0;
-    }
-
+@media (max-width:650px) {
     .stitre {
         font-size: 190%;
         margin-right: 10%;
     }
 
     .svideo {
-        width: 450px;
-        margin-left: -5px;
+        @media (max-width:650px) {
+            margin-top: 10%;
+        }
+
+
+
+        .Spara {
+            font-size: 120%;
+            max-width: 80%;
+            margin-left: 90px;
+        }
+
+        // .Ssection1 {
+
+
+        // }
+
+        .Spart1 {
+            font-size: 120%;
+        }
+
+        .para1 {
+            font-size: 70%;
+            padding: 10%;
+
+        }
+
+        .btn {
+            width: 120px;
+            height: 40px;
+            margin-top: 20%;
+
+        }
+
+        .StitreD {
+            margin: 10%;
+            position: relative;
+            right: 20px;
+            color: red;
+
+
+
+        }
+
+        .StitreF {
+            margin-right: 30%;
+            position: relative;
+            bottom: 60px;
+            margin-left: 150px;
+        }
+
+        .btb {
+            position: relative;
+            bottom: 50px;
+            margin-right: 40px;
+            font-size: 130%;
+            height: 80px;
+            width: 300px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            background-color: #2EE59D;
+            box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+            color: #fff;
+            transform: translateY(-7px);
+        }
+
+        .btR {
+            font-size: 130%;
+            height: 50px;
+            width: 110px;
+
+        }
+
+        .ser {
+            font-size: 130%;
+            position: relative;
+            right: 1px;
+            bottom: 10px;
+        }
+
+        i.fab {
+            font-size: 40px;
+            margin-left: 10px;
+        }
 
     }
 
-    .Spara {
-        font-size: 120%;
-        max-width: 80%;
-        margin-left: 90px;
-    }
-
-    .Ssection1 {
-        display: grid;
-        grid-template-columns: 1fr;
-    }
-
-    .Spart1 {
-        font-size: 120%;
-    }
-
-    .para1 {
-        font-size: 70%;
-        padding: 10%;
-
-    }
-
-    .btn {
-        width: 120px;
-        height: 40px;
-        margin-top: 20%;
-       
-    }
-
-    .StitreD {
-        margin: 10%;
-        position: relative;
-        right: 20px;
-    }
-
-    .StitreF {
-        margin-right: 30%;
-        position: relative;
-        bottom: 60px;
-        margin-left: 150px;
-    }
-
-    .btb {
-        position: relative;
-        bottom: 50px;
-        margin-right: 40px;
-        font-size: 130%;
-        height: 80px;
-        width: 300px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        background-color: #2EE59D;
-        box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-        color: #fff;
-        transform: translateY(-7px);
-    }
-
-    .btR {
-        font-size: 130%;
-        height: 50px;
-        width: 110px;
-
-    }
-
-    .ser {
-        font-size: 130%;
-        position: relative;
-        right: 1px;
-        bottom: 10px;
-    }
-
-    i.fab {
-        font-size: 40px;
-        margin-left: 10px;
-    }
 }
 
-@import"./footer";
-@import"./navbar"
+
+
+
+// @import"./footer"
