--- a/a propos (omar)/style.css
+++ b/a propos (omar)/style.css
@@ -1,3 +1,140 @@
+.header {
+  position: fixed;
+  margin-top: -20px;
+  height: 100px;
+  padding: 0 10px;
+  color: white;
+  background: #8f25D6;
+  opacity: .9;
+  z-index: 20;
+  width: 100vw;
+  margin-left: -50px;
+}
+
+@media (max-width: 375px) {
+  .header {
+    height: 0px;
+  }
+}
+
+@media (max-width: 800px) {
+  .header {
+    width: 100vw;
+    margin-left: -35px;
+  }
+}
+
+.logo {
+  line-height: 100px;
+  float: left;
+  color: #8f25D6;
+  margin-left: 60px;
+  font-size: 35px;
+  color: white;
+  cursor: pointer;
+}
+
+@media (max-width: 800px) {
+  .logo {
+    margin: 0px;
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 375px) {
+  .logo {
+    font-size: 30px;
+  }
+}
+
+.menu {
+  float: right;
+  line-height: 100px;
+  margin-left: 240px;
+}
+
+@media (max-width: 800px) {
+  .menu {
+    margin-right: 0px;
+  }
+}
+
+.menu a {
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 0 40px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.menu a:hover {
+  background-color: white;
+  border-radius: 30px;
+  padding: 10px;
+  padding-right: 20px;
+  font-style: unset;
+  color: #8f25D6;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.show-menu-btn,
+.hide-menu-btn {
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  font-size: 30px;
+  cursor: pointer;
+  display: none;
+}
+
+.show-menu-btn {
+  float: right;
+}
+
+.show-menu-btn i {
+  line-height: 100px;
+}
+
+#chk {
+  position: absolute;
+  visibility: hidden;
+}
+
+@media (max-width: 800px) {
+  .show-menu-btn,
+  .hide-menu-btn {
+    display: block;
+  }
+  .menu {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #8f25D6;
+    right: -100%;
+    top: 0;
+    text-align: center;
+    padding: 80px 0;
+    line-height: normal;
+    -webkit-transition: 0.7s;
+    transition: 0.7s;
+    z-index: 10;
+  }
+  .menu a {
+    display: block;
+    padding: 20px;
+  }
+  .hide-menu-btn {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+  }
+  #chk:checked ~ .menu {
+    right: 0;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,8 +146,8 @@ body {
 }
 
 .aheader {
-  background: url(img/back.jpg) no-repeat;
-  background-size: 1550px 600px;
+  background: url(img/bridge.jpg) no-repeat;
+  background-size: cover;
   height: 600px;
   background-attachment: fixed;
   width: 100%;
@@ -21,7 +158,7 @@ body {
        z-index: 2;
        background-color: rgba($color: #7d54be, $alpha: .7);
     
-   }  */
+   } */
 }
 
 @media screen and (max-width: 800px) {
@@ -60,7 +197,7 @@ body {
 }
 
 .apart1 {
-  width: 506px;
+  width: 100%;
   height: 610px;
   margin-top: -4px;
   -webkit-box-sizing: border-box;
@@ -95,7 +232,7 @@ body {
 }
 
 .apart2 img {
-  width: 506px;
+  width: 100%;
   height: 610px;
   margin-top: -4px;
   -webkit-box-sizing: border-box;
@@ -103,7 +240,7 @@ body {
 }
 
 .apart3 {
-  width: 506px;
+  width: 100%;
   height: 610px;
   margin-top: -4px;
   -webkit-box-sizing: border-box;
@@ -115,7 +252,7 @@ body {
 }
 
 .apart3 h1 {
-  margin-bottom: 35px;
+  margin-top: -20px;
   font-weight: 900;
 }
 
@@ -145,7 +282,7 @@ body {
 
 /*--------------------------------------------------------------------*/
 .apaart1 img {
-  width: 506px;
+  width: 100%;
   height: 610px;
   margin-top: -4px;
   -webkit-box-sizing: border-box;
@@ -153,7 +290,7 @@ body {
 }
 
 .apaart2 {
-  width: 506px;
+  width: 100%;
   height: 610px;
   margin-top: -4px;
   -webkit-box-sizing: border-box;
@@ -164,7 +301,7 @@ body {
 
 .apaart2 p {
   padding-top: 30px;
-  margin-bottom: 20px;
+  margin-top: -30px;
   font-weight: 900;
   font-size: 25px;
   line-height: 40px;
@@ -183,11 +320,11 @@ body {
 .apaart2 h3 {
   text-align: center;
   margin-top: -70px;
-  margin-right: 25px;
+  margin-left: 100px;
 }
 
 .apaart3 {
-  width: 506px;
+  width: 100%;
   height: 610px;
   margin-top: -4px;
   -webkit-box-sizing: border-box;
@@ -212,7 +349,7 @@ body {
 
 /*--------------------------------------------------------------------*/
 .apaaart1 {
-  width: 506px;
+  width: 100%;
   height: 610px;
   margin-top: -4px;
   -webkit-box-sizing: border-box;
@@ -243,7 +380,7 @@ body {
 }
 
 .apaaart2 {
-  width: 506px;
+  width: 100%;
   height: 610px;
   margin-top: -4px;
   -webkit-box-sizing: border-box;
@@ -268,7 +405,7 @@ body {
 
 .apaaart2 p {
   color: #7777;
-  line-height: 40px;
+  line-height: 20px;
   margin-top: 30px;
 }
 
@@ -282,7 +419,7 @@ body {
 }
 
 .apaaart3 {
-  width: 506px;
+  width: 100%;
   height: 610px;
   margin-top: -4px;
   -webkit-box-sizing: border-box;
@@ -310,27 +447,21 @@ body {
   font-weight: 900;
 }
 
-.apaaart3 hr {
-  height: 10px;
-  background: #EB2F5B;
-  width: 37%;
-  border-color: #EB2F5B;
-  margin-left: 298px;
-  margin-top: -12px;
-}
-
+/*.apaaart3 hr {
+    height: 10px;
+    background: #EB2F5B; 
+    width:37%;
+    border-color:#EB2F5B ;
+    margin-left: 300px;
+    margin-top: -12px;*/
 /*--------------------------------------------------------------------*/
 @media screen and (max-width: 800px) {
   .afixed {
     grid: grid;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-    width: 800px;
-  }
-  .aheader {
-    width: 820px;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[4];
+        grid-template-rows: repeat(4, 1fr);
   }
   .center {
     margin-left: 185px;
@@ -340,38 +471,30 @@ body {
     display: none;
   }
   .apart1 {
-    width: 410px;
     height: 700px;
   }
   .apart2 img {
-    width: 410px;
     height: 700px;
   }
   .apart3 {
-    width: 410px;
     height: 700px;
   }
   .apaart1 img {
-    width: 410px;
     height: 700px;
   }
   .apaart2 {
-    width: 410px;
     height: 700px;
   }
   .apaart2 h3 {
     margin-left: 70px;
   }
   .apaart3 {
-    width: 410px;
     height: 700px;
   }
   .apaaart1 {
-    width: 410px;
     height: 700px;
   }
   .apaaart2 {
-    width: 410px;
     height: 700px;
   }
   .apaaart2 p {
@@ -389,8 +512,8 @@ body {
     display: grid;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    -ms-grid-rows: 1fr  1fr  1fr  1fr  1fr  1fr  1fr  1fr  1fr;
-        grid-template-rows: 1fr  1fr  1fr  1fr  1fr  1fr  1fr  1fr  1fr;
+    -ms-grid-rows: (1fr)[9];
+        grid-template-rows: repeat(9, 1fr);
     width: 375px;
   }
   .apro {
@@ -472,8 +595,293 @@ body {
     height: 703px;
   }
   .apaaart3 hr {
-    margin-left: 93px;
+    margin-left: 0px;
     width: 188px;
   }
+}
+
+footer {
+  background-color: #5f6163;
+  text-align: center;
+  height: 355px;
+}
+
+@media (max-width: 375px) {
+  footer {
+    height: auto;
+  }
+}
+
+footer .projet {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  cursor: pointer;
+  position: relative;
+  top: 30px;
+}
+
+@media (max-width: 375px) {
+  footer .projet {
+    right: 10px;
+  }
+}
+
+footer .projet:hover h3 {
+  color: #bc93fd;
+}
+
+footer .projet:hover i {
+  color: #bc93fd;
+  left: 32px;
+}
+
+footer .projet i {
+  font-size: 40px;
+  color: white;
+  position: relative;
+  top: 45px;
+  left: 22px;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+@media (max-width: 375px) {
+  footer .projet i {
+    top: 35px;
+    font-size: 30px;
+  }
+}
+
+footer .projet h3 {
+  color: white;
+  font-size: 40px;
+  font-weight: normal;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+@media (max-width: 375px) {
+  footer .projet h3 {
+    font-size: 30px;
+  }
+}
+
+.footer-content {
+  margin-top: 60px;
+}
+
+@media (max-width: 375px) {
+  .footer-content {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr .4fr 0.4fr;
+        grid-template-rows: 1fr .4fr 0.4fr;
+        grid-template-areas: "form"
+ "contact"
+ "icon";
+  }
+}
+
+.flaot {
+  float: left;
+  width: 33%;
+}
+
+@media (max-width: 800px) {
+  .flaot {
+    width: 32.90%;
+  }
+}
+
+@media (max-width: 767px) {
+  .flaot {
+    width: 32.80%;
+  }
+}
+
+@media (max-width: 375px) {
+  .flaot {
+    float: none;
+  }
+}
+
+footer .contact {
+  color: #ffffff80;
+  margin-top: 10px;
+}
+
+@media (max-width: 800px) {
+  footer .contact {
+    font-size: 13px;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 375px) {
+  footer .contact {
+    grid-area: contact;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -10px;
+  }
+  footer .contact .cnt {
+    position: relative;
+    right: 35px;
+  }
+}
+
+footer .contact h4 {
+  font-weight: 100;
+}
+
+footer .contact h4:hover {
+  color: #bc93fd;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+footer .form {
+  margin-left: 10px;
+}
+
+@media (max-width: 375px) {
+  footer .form {
+    grid-area: form;
+  }
+}
+
+footer .form .text-input {
+  padding: 10px 30px;
+  margin-bottom: 20px;
+  background: none;
+  border: 1px solid #bc93fd;
+  color: white;
+  border-radius: 50px;
+  outline-style: none;
+  width: 160px;
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+}
+
+@media (max-width: 375px) {
+  footer .form .text-input {
+    margin-left: 55%;
+  }
+}
+
+footer .form .text-input::-webkit-input-placeholder {
+  color: #ffffff80;
+}
+
+footer .form .text-input:-ms-input-placeholder {
+  color: #ffffff80;
+}
+
+footer .form .text-input::-ms-input-placeholder {
+  color: #ffffff80;
+}
+
+footer .form .text-input::placeholder {
+  color: #ffffff80;
+}
+
+footer .form .text-input:focus {
+  width: 230px;
+}
+
+@media (max-width: 375px) {
+  footer .form .text-input:focus {
+    width: 160px;
+  }
+}
+
+footer .form .submit-input {
+  background: none;
+  color: #ffffff80;
+  padding: 10px 15px;
+  border: 1px solid #bc93fd;
+  border-radius: 50px;
+  -webkit-transition: .5S;
+  transition: .5S;
+}
+
+@media (max-width: 375px) {
+  footer .form .submit-input {
+    margin-left: 115%;
+  }
+}
+
+footer .form .submit-input:hover {
+  background-color: #8561be;
+  color: white;
+  border: 1px solid #8561be;
+}
+
+@media (max-width: 375px) {
+  footer .footer-icon {
+    grid-area: icon;
+    margin-left: 35%;
+  }
+}
+
+footer .footer-icon .icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 60px;
+}
+
+footer .footer-icon ul {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  list-style: none;
+}
+
+footer .footer-icon .icon-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-decoration: none;
+  font-size: 19px;
+  color: #a5a4a4;
+  border-radius: 50%;
+}
+
+@media (max-width: 375px) {
+  footer .footer-icon .icon-link {
+    padding-right: 10px;
+  }
+}
+
+footer .footer-icon .icon-link:hover .fa-twitter {
+  color: #1da1f2;
+}
+
+footer .footer-icon .icon-link:hover .fa-facebook-f {
+  color: #1877f2;
+}
+
+footer .footer-icon .icon-link:hover .fa-instagram {
+  color: #e4405f;
+}
+
+footer .footer-icon .icon-link:hover .fa-linkedin-in {
+  color: #0077b5;
+}
+
+footer .copy h6 {
+  width: 300px;
+  color: #ffffff80;
+  font-weight: 100;
+  margin: 0 auto;
+  padding: 0;
 }
 /*# sourceMappingURL=style.css.map */
